<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".officeInformation.OfficeMainActivity">

    <ImageView
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/office_info"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/one">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/one"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="106dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:onClick="register"
                    tools:ignore="UsingOnClickInXml">

                    <ImageView
                        android:id="@+id/mtp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/registrar" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/mtp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/info_registrar_office"
                        android:textSize="12dp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#aaaaaa" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#aaaaaa" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="106dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:onClick="account">

                    <ImageView
                        android:id="@+id/mtps"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/account" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/mtps"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/info_office_of_the_account"
                        android:textSize="12dp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#aaaaaa" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#aaaaaa" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="106dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:onClick="it">

                    <ImageView
                        android:id="@+id/otp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/it" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/otp"
                        android:layout_centerHorizontal="true"
                        android:text="@string/info_it_office"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#aaaaaa" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="#aaaaaa" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="106dp"
                    android:orientation="vertical"
                    android:onClick="controller">

                    <ImageView
                        android:id="@+id/ctp"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/coltroller" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ctp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/info_controller_office"
                        android:textSize="12dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#aaaaaa" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="106dp"
                    android:orientation="vertical"
                    android:onClick="library">

                    <ImageView
                        android:id="@+id/bte"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/library" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/bte"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/info_library_office"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#aaaaaa" />

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>